--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
     "react-lottie": "^1.2.3",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "redux": "^4.0.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
