--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.0.0",
     "react-transition-group": "^4.0.0",
     "redux": "^4.0.1",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "yarn": "^1.15.2"
   },
   "scripts": {
     "start": "react-scripts start",
