--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.0",
+    "react-clipboard.js": "^2.0.7",
     "react-dev-utils": "^9.0.0",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
